--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "^16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "yet-another-react-lightbox": "^3.27.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -23,6 +24,7 @@
     "baseline-browser-mapping": "^2.9.4",
     "eslint": "^9",
     "eslint-config-next": "16.0.4",
+    "next-transpile-modules": "^10.0.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
